# orekit-app-template

./: .gitignore  config.yaml  environment.yaml  pyproject.toml  readme.md
src/: __main__.py
src/app_name/: __main__.py  application.py
src/app_name/apps/: __init__.py  example.py  minimal_example.py
src/app_name/utils/: __init__.py  logging.py
